# treds

./: CMakeLists.txt  LICENSE  README.md  kubeflow-test - kubeflow-test (1).csv  main.cpp  main_class.cpp  main_cpp_11.cpp  main_predicate.cpp  main_simple_c.cpp  main_simple_cpp.cpp
